--- a/GradeOne/Awotade-Cedar-Result.html
+++ b/GradeOne/Awotade-Cedar-Result.html
@@ -97,7 +97,7 @@
 
                        <table>
                         
-                        <p>Continuous Assessment Scores for Term; 1st Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -510,7 +510,7 @@
                                              <p>Class Teachers Comment: Cedar has a positive attitude about school work.<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment: an excellent performance.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment: An excellent performance.<br>_____________________________________________________</p>
 
                                              &nbsp;
                                              &nbsp;
