--- a/GradeFive/Adeniji-Pamilerin-Result.html
+++ b/GradeFive/Adeniji-Pamilerin-Result.html
@@ -267,7 +267,7 @@
                           <td>Good</td>
                           <td>Average</td>
                           <td>Average</td>
-                          <td>v.Good</td>
+                          <td>V.Good</td>
                           <td>Good</td>
                           <td>Excellent</td>
                           <td>Fair</td>
