--- a/GradeTwo/Adeniyi-Derek-Result.html
+++ b/GradeTwo/Adeniyi-Derek-Result.html
@@ -260,9 +260,9 @@
                         <tr>
                           <td>Good</td>
                           <td>Good</td>
-                          <td>Excellence</td>
-                          <td>Excellence</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td>Good</td>
                           <td>V.Good</td>
                           <td>Average</td>
@@ -271,7 +271,7 @@
                           <td>V.Good</td>
                           <td>Good</td>
                           <td>V.Good</td>
-                          <td>Marks Obtained</td>
+                          <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
                        </table>
