--- a/GradeTwo/Adeniyi-Todimu-Result.html
+++ b/GradeTwo/Adeniyi-Todimu-Result.html
@@ -259,7 +259,7 @@
                         
                         <tr>
                           <td>Good</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
                           <td>Average</td>
                           <td>Average</td>
                           <td>Fair</td>
