--- a/GradeTwo/Akande-Wisdom-Result.html
+++ b/GradeTwo/Akande-Wisdom-Result.html
@@ -262,11 +262,11 @@
                        
                         <tr>
                           <td>V.Good</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
                           <td>V.Good</td>
-                          <td>Excellence</td>
-                          <td>Excellence</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td>V.Good</td>
                           <td>Good</td>
                           <td>Good</td>
