--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -257,18 +257,18 @@
                        
                         <tr>
                           <td>Good</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
                           <td>V.Good</td>
-                          <td>Excellence</td>
-                          <td>Excellence</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
                           <td>V.Good</td>
                           <td>Good</td>
                           <td>Good</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
-                          <td>Excellence</td>
+                          <td>Excellent</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
