--- a/GradeFour/Adegoke-David-Result.html
+++ b/GradeFour/Adegoke-David-Result.html
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td></td> 
+                          <td>102</td> 
                                          
                        </tr>
                       </table>
@@ -214,8 +214,8 @@
                           <td>92</td>
                           <td>100</td>
                           <td>95</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>70</td>
+                          <td>75</td>
                           <td>76</td>
                           <td>95</td>
                           <td>85</td>
@@ -250,8 +250,8 @@
                           <td>88</td>
                           <td>93</td>
                           <td>85</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>81</td>
+                          <td>77</td>
                           <td>76</td>
                           <td>90</td>
                           <td>78</td>
@@ -269,8 +269,8 @@
                           <td>very good</td>
                           <td>excellent</td>
                           <td>very good</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>Very good</td>
+                          <td>Good</td>
                           <td>good</td>
                           <td>excellent</td>
                           <td>good</td>
@@ -503,10 +503,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: David needs to work on not distracting others  and himself during class </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A very good performance </p>
 
                      &nbsp;
                      &nbsp;
