--- a/GradeFour/Adeniba-Tofunmi-Result.html
+++ b/GradeFour/Adeniba-Tofunmi-Result.html
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td></td> 
+                          <td>116</td> 
                                          
                        </tr>
                       </table>
@@ -214,8 +214,8 @@
                           <td>92</td>
                           <td>88</td>
                           <td>65</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>70</td>
+                          <td>65</td>
                           <td>54</td>
                           <td>85</td>
                           <td>75</td>
@@ -250,8 +250,8 @@
                           <td>76</td>
                           <td>82</td>
                           <td>63</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>69</td>
+                          <td>70</td>
                           <td>56</td>
                           <td>85</td>
                           <td>72</td>
@@ -269,8 +269,8 @@
                           <td>good</td>
                           <td>very good</td>
                           <td>average</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>Average</td>
+                          <td>Good</td>
                           <td>fair</td>
                           <td>very good</td>
                           <td>good</td>
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Tofunmi has difficulty staying focused and on task, although he has started working on it </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A good performance </p>
 
                      &nbsp;
                      &nbsp;
