--- a/GradeFour/Adeyinka-Dodanim-Result.html
+++ b/GradeFour/Adeyinka-Dodanim-Result.html
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td></td> 
+                          <td>116</td> 
                                          
                        </tr>
                       </table>
@@ -214,8 +214,8 @@
                           <td>96</td>
                           <td>96</td>
                           <td>91</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>80</td>
+                          <td>80</td>
                           <td>92</td>
                           <td>100</td>
                           <td>95</td>
@@ -250,8 +250,8 @@
                           <td>95</td>
                           <td>98</td>
                           <td>91</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>89</td>
+                          <td>86</td>
                           <td>94</td>
                           <td>98</td>
                           <td>88</td>
@@ -269,8 +269,8 @@
                           <td>excellent</td>
                           <td>excellent</td>
                           <td>excellent</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>Very good</td>
+                          <td>Very good</td>
                           <td>excellent</td>
                           <td>excellent</td>
                           <td>very good</td>
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Dodanim listens well and shares excellent ideas frequently </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: An excellent performance </p>
 
                      &nbsp;
                      &nbsp;
