--- a/PreSchool/Animashaun-Fiirekunolami-Result.html
+++ b/PreSchool/Animashaun-Fiirekunolami-Result.html
@@ -92,7 +92,7 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                       <h2>Result for <br>Animashaun Fiirekunolami</h2><br>
-                     <p>Continuous Assessment Scores for Term ................... </p>
+                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
