--- a/PreSchool/Bello-Tiwadola-Result.html
+++ b/PreSchool/Bello-Tiwadola-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Bello Tiwadola</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term ................... </p>
+                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
