--- a/GradeTwo/Ayetuoma-Gaius-Result.html
+++ b/GradeTwo/Ayetuoma-Gaius-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade Two </h2>
 
                      <table>
-                        <p>Continuous Assessment Scores for Term .................... </p>
+                        <p>Continuous Assessment Scores for Term 1St Term 2023/2024 </p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
@@ -112,12 +112,12 @@
                             </tr>
                             <tr>
                               <td>No. of times school opened</td>
-                              <td></td> 
+                              <td>118</td> 
                                              
                            </tr>
                            <tr>
                               <td>No. of times present</td>
-                              <td></td> 
+                              <td>114</td> 
                                              
                            </tr>
                           </table>
@@ -315,7 +315,7 @@
                                                 <tr>
                                                   <td>Sport</td>
                                                   <td></td>
-                                                  <td></td>
+                                                  <td>*</td>
                                                   <td></td>
                                                   <td></td>
                                                   <td></td>
