--- a/GradeFive/Adetola-Omotolani-Result.html
+++ b/GradeFive/Adetola-Omotolani-Result.html
@@ -272,7 +272,7 @@
                           <td>Good</td>
                           <td>Average</td>
                           <td>Average</td>
-                          <td><Good/td>
+                          <td>Good</td>
                           <td>-</td>
                           <td></td>
                           
