--- a/GradeFour/Balogun-Lilian-Result.html
+++ b/GradeFour/Balogun-Lilian-Result.html
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td></td> 
+                          <td>118</td> 
                                          
                        </tr>
                       </table>
@@ -214,8 +214,8 @@
                           <td>96</td>
                           <td>100</td>
                           <td>100</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>80</td>
+                          <td>80</td>
                           <td>68</td>
                           <td>95</td>
                           <td>90</td>
@@ -250,8 +250,8 @@
                           <td>92</td>
                           <td>100</td>
                           <td>98</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>84</td>
+                          <td>86</td>
                           <td>83</td>
                           <td>93</td>
                           <td>83</td>
@@ -269,8 +269,8 @@
                           <td>excellent</td>
                           <td>excellent</td>
                           <td>excellent</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>Very good</td>
+                          <td>Very good</td>
                           <td>very good</td>
                           <td>excellent</td>
                           <td>very good</td>
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Lilian is progressing nicely and shows consistent improvement in many areas of school work</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: An outstanding performance </p>
 
                      &nbsp;
                      &nbsp;
