--- a/GradeFour/Boyejo-Michelle-Result.html
+++ b/GradeFour/Boyejo-Michelle-Result.html
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td></td> 
+                          <td>116</td> 
                                          
                        </tr>
                       </table>
@@ -214,8 +214,8 @@
                           <td>88</td>
                           <td>76</td>
                           <td>91</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>70</td>
+                          <td>806</td>
                           <td>67</td>
                           <td>100</td>
                           <td>80</td>
@@ -250,8 +250,8 @@
                           <td>84</td>
                           <td>88</td>
                           <td>76</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>76</td>
+                          <td>86</td>
                           <td>77</td>
                           <td>88</td>
                           <td>86</td>
@@ -269,8 +269,8 @@
                           <td>very good</td>
                           <td>very good</td>
                           <td>good</td>
-                          <td>-</td>
-                          <td>-</td>
+                          <td>Good</td>
+                          <td>Very good</td>
                           <td>good</td>
                           <td>very good</td>
                           <td>very good</td>
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Michelle is enthusiastic about participating during classroom activities</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A very good result</p>
 
                      &nbsp;
                      &nbsp;
