--- a/GradeFour/Fashola-Tobiloba-Result.html
+++ b/GradeFour/Fashola-Tobiloba-Result.html
@@ -121,7 +121,7 @@
                           </tr>
                           <tr>
                              <td>No. of times present</td>
-                             <td></td> 
+                             <td>112</td> 
                                             
                           </tr>
                          </table>
@@ -216,7 +216,7 @@
                           <td>76</td>
                           <td>86</td>
                           <td>80</td>
-                          <td>-</td>
+                          <td>70</td>
                           <td>77</td>
                           <td>90</td>
                           <td>80</td>
@@ -252,7 +252,7 @@
                           <td>76</td>
                           <td>83</td>
                           <td>78</td>
-                          <td>-</td>
+                          <td>69</td>
                           <td>68</td>
                           <td>90</td>
                           <td>79</td>
@@ -271,7 +271,7 @@
                           <td>good</td>
                           <td>very good</td>
                           <td>good</td>
-                          <td>-</td>
+                          <td>Average</td>
                           <td>average</td>
                           <td>excellent</td>
                           <td>good</td>
@@ -507,10 +507,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Tobiloba is easily distracted. He needs to take his academic more seriously</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A very good performance </p>
 
                      &nbsp;
                      &nbsp;
