--- a/GradeFour/Lawal-Hassan-Result.html
+++ b/GradeFour/Lawal-Hassan-Result.html
@@ -119,7 +119,7 @@
                        </tr>
                        <tr>
                           <td>No. of times present</td>
-                          <td></td> 
+                          <td>116</td> 
                                          
                        </tr>
                       </table>
@@ -215,7 +215,7 @@
                           <td>100</td>
                           <td>-</td>
                           <td>70</td>
-                          <td>-</td>
+                          <td>75</td>
                           <td>72</td>
                           <td>100</td>
                           <td>80</td>
@@ -251,7 +251,7 @@
                           <td>95</td>
                           <td>-</td>
                           <td>72</td>
-                          <td>-</td>
+                          <td>75</td>
                           <td>73</td>
                           <td>98</td>
                           <td>77</td>
@@ -270,7 +270,7 @@
                           <td>Excellent</td>
                           <td>-</td>
                           <td>Good</td>
-                          <td>-</td>
+                          <td>Good</td>
                           <td>Good</td>
                           <td>Excellent</td>
                           <td>Good</td>
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Hassan is very responsible and turns in work on time </p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A very good performance </p>
 
                      &nbsp;
                      &nbsp;
