--- a/GradeFour/Fashola-Tobiloba-Result.html
+++ b/GradeFour/Fashola-Tobiloba-Result.html
@@ -96,7 +96,7 @@
 
                      <table>
                         <table>
-                           <p>Continuous Assessment Scores for Term  ..................... </p>
+                           <p>Continuous Assessment Scores for Term: 1st term 2023/2024 </p>
                             
                            <!-- Attendance Table-->
                         &nbsp;
