--- a/GradeFour/Shittu-Tiwaloluwa-Result.html
+++ b/GradeFour/Shittu-Tiwaloluwa-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Shittu Tiwaloluwa</h2><br>
                      <h2> Grade Four </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for Term: 1st term 2023/2024 </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
