--- a/GradeOne/Adefiranye-Mofetoluwa-Result.html
+++ b/GradeOne/Adefiranye-Mofetoluwa-Result.html
@@ -275,7 +275,7 @@
                           <tdExcellent></td>
                           <td>Excellent</td>
                           <td>Excellent</td>
-                          <td>Excellent</td>
+                          <td></td>
                           
                           <td>Teachers Remarks</td>                           
                         </tr>
@@ -510,7 +510,7 @@
                      <p>Class Teachers Comment:Mofetoluwa needs to review his writing.</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:An excellent result, keep it up.<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:An excellent result, keep it up.</p>
 
                      &nbsp;
                      &nbsp;
