--- a/GradeThree/Aderinto-Aanuoluwaposimi-Result.html
+++ b/GradeThree/Aderinto-Aanuoluwaposimi-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Aderinto Aanuoluwaposimi</h2><br>
                      <h2> Grade Three </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term 1st term 2023/2024</p>
+                        <p>Continuous Assessment Scores for Term.... 1st term 2023/2024</p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
