--- a/GradeOne/Akande-Ifeoluwa-Result.html
+++ b/GradeOne/Akande-Ifeoluwa-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Akande Ifeoluwa</h2><br>
                      <h2> Grade One </h2>
-                        <p>Continuous Assessment Scores for Term 1st Term 2023/2024</p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024</p>
                                       <!-- Attendance Table-->
                                               <table>                                    
                                                <tr>
@@ -502,10 +502,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:Ifeoluwa has made some progress this term, continue to put in more effort<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment:Ifeoluwa has made some progress this term, continue to put in more effort.</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:A very good resuit.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment:A very good resuit.</p>
 .
                                              &nbsp;
                                              &nbsp;
