--- a/GradeThree/Duruh-Osinachi-Result.html
+++ b/GradeThree/Duruh-Osinachi-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade Three </h2>
 
                      <table>
-                        <p>Continuous Assessment Scores for Term  1ST TERM 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term....  1ST TERM 2023/2024 </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
