--- a/GradeThree/Obasa-Omolola-Result.html
+++ b/GradeThree/Obasa-Omolola-Result.html
@@ -95,7 +95,7 @@
                      <h2>Result for <br>Obasa Omolola</h2><br>
                      <h2> Grade Three </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  1ST TERM 2023/2024</p>
+                        <p>Continuous Assessment Scores for Term....  1ST TERM 2023/2024</p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
