--- a/GradeThree/Ojetola-Fikayo-Result.html
+++ b/GradeThree/Ojetola-Fikayo-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Ojetola Fikayo</h2><br>
                      <h2> Grade Three </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term 1ST TERM 2023/2024</p>
+                        <p>Continuous Assessment Scores for Term.... 1ST TERM 2023/2024</p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
