--- a/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
+++ b/GradeThree/Olayemi-Aanuoluwaposimi-Result.html
@@ -507,10 +507,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Aanuoluwa participates actively in the classroom.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Aanuoluwa participates actively in the classroom.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:A very good result<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: A very good result.<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
