--- a/GradeOne/Akinlabi-Akindesire-Result.html
+++ b/GradeOne/Akinlabi-Akindesire-Result.html
@@ -504,10 +504,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:Akindesire tackles new challenges with a positive attitude.<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment:Akindesire tackles new challenges with a positive attitude.</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:A very good result.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment:A very good result.</p>
 
                                              &nbsp;
                                              &nbsp;
