--- a/GradeOne/Akintola-Phoebe-Result.html
+++ b/GradeOne/Akintola-Phoebe-Result.html
@@ -96,7 +96,7 @@
                      <h2> Grade One </h2>
 
                                          <table>
-                        <p>Continuous Assessment Scores for Term 1st Term 2023/2024.</p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024.</p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -275,7 +275,7 @@
                                                   <td>Very good</td>
                                                   <td>Very good</td>
                                                   <td>Excellent</td>
-                                                  <td>Excellent</td>
+                                                  <td></td>
                                                   <td>Teachers Remarks</td>                           
                                                 </tr>
                                              
@@ -506,10 +506,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:Phoebe is making remarkable progress, keep it up.<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment:Phoebe is making remarkable progress, keep it up.</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment:A very good result.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment:A very good result.</p>
 
                                              &nbsp;
                                              &nbsp;
