--- a/GradeOne/Alake-Adunola-Result.html
+++ b/GradeOne/Alake-Adunola-Result.html
@@ -96,7 +96,7 @@
 
                     
                        <table>
-                        <p>Continuous Assessment Scores for Term 1st 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
