--- a/GradeOne/Awotade-Cedar-Result.html
+++ b/GradeOne/Awotade-Cedar-Result.html
@@ -507,10 +507,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: Cedar has a positive attitude about school work.<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment: Cedar has a positive attitude about school work.</p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment: An excellent performance.<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment: An excellent performance.</p>
 
                                              &nbsp;
                                              &nbsp;
