--- a/GradeOne/Elue-Andrea-Result.html
+++ b/GradeOne/Elue-Andrea-Result.html
@@ -95,7 +95,7 @@
                      <h2>Result for <br>Elue Andrea</h2><br>
                      <h2> Grade One </h2>
                        <table>
-                        <p>Continuous Assessment Scores for Term 1st term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 1st term 2023/2024 </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -274,7 +274,7 @@
                                                   <td>Excellent</td>
                                                   <td>Very good</td>
                                                   <td>Excellent</td>
-                                                  <td>Excellent</td>
+                                                  <td></td>
                                                   <td>Teachers Remarks</td>                           
                                                 </tr>
                                              
