--- a/GradeOne/Fasola-Desire-Result.html
+++ b/GradeOne/Fasola-Desire-Result.html
@@ -96,7 +96,7 @@
                      <h2>Result for <br>Fasola Desire</h2><br>
                      <h2> Grade One </h2>
                        <table>
-                        <p>Continuous Assessment Scores for Term 1st Term 2023/2024.  </p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024.  </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
@@ -275,7 +275,7 @@
                                                   <td>Excellent</td>
                                                   <td>Good</td>
                                                   <td>Excellent</td>
-                                                  <td>Excellent</td>
+                                                  <td></td>
                                                   <td>Teachers Remarks</td>                           
                                                 </tr>
                                              
