--- a/GradeOne/Okikiola-Koleade-Result.html
+++ b/GradeOne/Okikiola-Koleade-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade One </h2>
 
                                       <table>
-                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 1st Term 2023/2024. </p>
                                              <!-- Attendance Table-->
                                              &nbsp;
                                              &nbsp;
