--- a/GradeThree/Aikhionbare-Obaloluwa-Result.html
+++ b/GradeThree/Aikhionbare-Obaloluwa-Result.html
@@ -506,7 +506,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Obaloluwa is very brilliant but needs to be attentive in class.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Obaloluwa is very brilliant and loves to explore.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: A very good result.<br____________</p>
