--- a/GradeTwo/Adeniyi-Derek-Result.html
+++ b/GradeTwo/Adeniyi-Derek-Result.html
@@ -95,7 +95,7 @@
                      <h2> Grade Two </h2>
 
                      <table>
-                        <p>Continuous Assessment Scores for Term .................... </p>
+                        <p>Continuous Assessment Scores for Term:1St Term 2023/2024</p>
                          <!-- Attendance Table-->
                          <table>                                    
                            <tr>
@@ -345,8 +345,8 @@
                                                </tr>
                                                <tr>
                                                  <td>Puntuality</td>
-                                                 <td></td>
                                                  <td>*</td>
+                                                 <td></td>
                                                  <td></td>
                                                  <td></td>
                                                
