--- a/GradeThree/Ojetola-Fikayo-Result.html
+++ b/GradeThree/Ojetola-Fikayo-Result.html
@@ -275,7 +275,7 @@
                           <td>Very Good</td>
                           <td>Very Good</td>
                           <td>Very Good</td>
-                          <td>Ver Good</td>
+                          <td>Very Good</td>
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
