--- a/GradeFive/Ojetola-Oluwasemilore-Result.html
+++ b/GradeFive/Ojetola-Oluwasemilore-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Ojetola Oluwasemilore</h2><br>
                      <h2> Grade Five </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term  ..................... </p>
+                        <p>Continuous Assessment Scores for Term  1st Term 2023/2024 </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Semilore in-class behaviour is excellent <br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:  Very Good <br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
