--- a/GradeTwo/Odebunmi-Temisire-Result.html
+++ b/GradeTwo/Odebunmi-Temisire-Result.html
@@ -499,7 +499,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Temisire is always ready to listen in class. Good job!<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: Temisire is always eager to learn. Good job!<br>_____________________________________________________</p>
                       &nbsp;
                       &nbsp;
                       <p>Head Teachers Comment: Great job!<br>_____________________________________________________</p>
