--- a/GradeTwo/Oyeniran-Olumide-Result.html
+++ b/GradeTwo/Oyeniran-Olumide-Result.html
@@ -344,8 +344,8 @@
                         </tr>
                         <tr>
                           <td>Puntuality</td>
-                          <td></td>
                           <td>*</td>
+                          <td></td>
                           <td></td>
                           <td></td>
                         
@@ -502,7 +502,7 @@
                       <p>Class Teachers Comment:Olumide does not give up when faced with difficult task.<br>_____________________________________________________</p>
                       &nbsp;
                       &nbsp;
-                      <p>Head Teachers Comment: Keep it up<br>_____________________________________________________</p>
+                      <p>Head Teachers Comment: Outstanding result. Keep it up!<br>_____________________________________________________</p>
 
                       &nbsp;
                       &nbsp;
