--- a/GradeTwo/Balogun-Daniel-Result.html
+++ b/GradeTwo/Balogun-Daniel-Result.html
@@ -500,7 +500,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Daniel listens to correction.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Daniel takes to correction.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: An encouraging performance.<br>_____________________________________________________</p>
