--- a/GradeTwo/Oladejo-Obafemi-Result.html
+++ b/GradeTwo/Oladejo-Obafemi-Result.html
@@ -502,10 +502,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: This is a very good performance.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: A consistent and very good performance.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Keep it up.<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Outstanding result. Keep it up.<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
