--- a/GradeTwo/Ojo-David-Result.html
+++ b/GradeTwo/Ojo-David-Result.html
@@ -497,7 +497,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: David is challenging his energy towards getting better.<br>Do not relent._____________________________________________________</p>
+                                             <p>Class Teachers Comment: David is chanelling his energy towards getting better.<br>Do not relent.</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment: An encouraging performance.<br>_____________________________________________________</p>
