--- a/GradeTwo/Ibiyemi-Roheem-Result.html
+++ b/GradeTwo/Ibiyemi-Roheem-Result.html
@@ -498,7 +498,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: Roheem is attentive i class but there's still room <br>for improvement in his academics. __________________________________________________</p>
+                                             <p>Class Teachers Comment: Roheem is attentive in class but there's still room <br>for improvement in his academics. __________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment:An average performance.<br>_____________________________________________________</p>
