--- a/GradeTwo/Gentry-Taraoluwa-Result.html
+++ b/GradeTwo/Gentry-Taraoluwa-Result.html
@@ -501,7 +501,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Tara hsa potentials to do better than this.Work harder next term.<br>___________________________________________________</p>
+                      <p>Class Teachers Comment: Tara has potentials to do better than this. Work harder next term.<br>___________________________________________________</p>
                       &nbsp;
                       &nbsp;
                       <p>Head Teachers Comment: An average performance.<br>_____________________________________________________</p>
