--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -297,7 +297,7 @@
                         <tr>
                           <td>Verbal Fluency</td>
                           <td></td>
-                          <td></td>
+                          <td>*</td>
                           <td></td>
                           <td></td>
                           <td></td>
@@ -498,10 +498,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:Morayo contribute positive ideas in solving problems.<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment:Morayo contributes positively in class.<br>_____________________________________________________</p>
                       &nbsp;
                       &nbsp;
-                      <p>Head Teachers Comment: This is a good result.<br>_____________________________________________________</p>
+                      <p>Head Teachers Comment: This is a very good result.<br>_____________________________________________________</p>
 
                       &nbsp;
                       &nbsp;
