--- a/GradeTwo/Bello-Oluwalonimi-Result.html
+++ b/GradeTwo/Bello-Oluwalonimi-Result.html
@@ -502,7 +502,7 @@
                             
                           </tr>
                        </table>
-                       <p>Class Teachers Comment: Oluwalonimi is very gentle. Keep it up!<br>_____________________________________________________</p>
+                       <p>Class Teachers Comment: Bravo Oluwalonimi!. Keep it up!<br>_____________________________________________________</p>
                        &nbsp;
                        &nbsp;
                        <p>Head Teachers Comment: An excellent result.<br>_____________________________________________________</p>
