--- a/GradeTwo/Popoola-Oreoluwa-Result.html
+++ b/GradeTwo/Popoola-Oreoluwa-Result.html
@@ -499,7 +499,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: Good job Ore!<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment: Good Job Ore!<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment: A very good performance.<br>_____________________________________________________</p>
