--- a/GradeTwo/Yinka-Sobo-Tumilara-Result.html
+++ b/GradeTwo/Yinka-Sobo-Tumilara-Result.html
@@ -500,10 +500,10 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:Tumilara is very hardworking and friendly.<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment:Tumilara is very hardworking and friendly.<br> </p>
                                              &nbsp;
                                              &nbsp;
-                                             <p>Head Teachers Comment: Great job!<br>_____________________________________________________</p>
+                                             <p>Head Teachers Comment: Great Job! Keep it up. <br>_____________________________________________________</p>
 
                                              &nbsp;
                                              &nbsp;
