--- a/GradeFive/Adegbite-Joel-Result.html
+++ b/GradeFive/Adegbite-Joel-Result.html
@@ -271,7 +271,7 @@
                           <td>Excellent</td>
                           <td>Good</td>
                           <td>Good</td>
-                          <td><V.Good/td>
+                          <td>V.Good</td>
                           <td>Excellent</td>
                           <td>-</td>
                           <td></td>
