--- a/GradeFive/Adegbite-Joel-Result.html
+++ b/GradeFive/Adegbite-Joel-Result.html
@@ -263,7 +263,7 @@
                        
                         <tr>
                           <td>Good</td>
-                          <td><Excellent/td>
+                          <td>Excellent</td>
                           <td>V.Good</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
