--- a/GradeSix/Emmanuella-Aderibigbe-Result.html
+++ b/GradeSix/Emmanuella-Aderibigbe-Result.html
@@ -529,8 +529,8 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:  Emmanuella needs to pay more attention in class and talk less <br>_______________________________________________</p>
-                     &nbsp;
+                     <p>Class Teachers Comment:Emmanuella has an impressive problem solving skills but she needs to pay more attention in class and talk less <br>_______________________________________________</p>
+               
                      &nbsp;
                      <p>Head Teachers Comment:Very good.<br></p>
 
