--- a/GradeSix/Paul-Odeleye-Result.html
+++ b/GradeSix/Paul-Odeleye-Result.html
@@ -528,7 +528,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Paul needs to put in more effort in his reading ability.<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Paul is always enthusiastic in class discussions but he needs to put in more effort in his reading ability.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Good.<br></p>
