--- a/GradeFive/Yinka-Sobo-Daniel-Semilore-Result.html
+++ b/GradeFive/Yinka-Sobo-Daniel-Semilore-Result.html
@@ -505,7 +505,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:   Daniel needs to be more focused in class.  <br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:   Daniel takes an active role in class   <br>however, he needs to be more focused in class</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:  V.Good  <br>_____________________________________________________</p>
