--- a/PreSchool/Akinsolu-David-Result.html
+++ b/PreSchool/Akinsolu-David-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Akinsolu David</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term ................... </p>
+                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -479,7 +479,7 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment:David has shown significant improvement this term. <br> We are certain that we will see more improvement next term.</p>
+                   <p>Class Teachers Comment:David has shown significant improvement this term.We are certain that we will see more improvement next term.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: This is a good result. <br></p>
