--- a/PreSchool/Asake-Mololuwa-Result.html
+++ b/PreSchool/Asake-Mololuwa-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Asake Mololuwa</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
                    <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -482,8 +482,7 @@
                 <p>Class Teachers Comment: Mololuwa is a great pupil. He is always excited to learn. <br></p>
                   &nbsp;
                   &nbsp;
-                  <p>Head Teachers Comment: This is a very good resukt. <br></p>
-
+                  <p>Head Teachers Comment: This is a very good result. <br></p>l
                   &nbsp;
                   &nbsp;                
                 
