--- a/PreSchool/Ayoola-Jason-Result.html
+++ b/PreSchool/Ayoola-Jason-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Ayoola Jason</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -286,7 +286,7 @@
                      <tr>
                         <td>Reading</td>
                         <td></td>
-                        <td>*</td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -478,7 +478,7 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: Jason has shown tremendous improverment this term. <br> We are happy to have him in the preschool class.</p>
+                   <p>Class Teachers Comment: Jason has shown tremendous improverment this term. We are happy to have him in the preschool class.</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: This is a very good result. <br></p>
